[package]
name = "libmeterfeeder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[target.x86_64-pc-windows-gnu.libmeterfeeder]
rustc-link-search = ["."]
rustc-link-lib = [":libmeterfeeder.so"]

[dependencies]
libc = "0.2.126"